# larps

./: Cargo.toml  README.md
.cargo/: config.toml
resources/: oodle_state  skills
src/: capture.rs  definitions.rs  lib.rs  meter.rs  oodle.rs  parser.rs  socket.rs  ui.rs  util.rs
updater/: Cargo.toml
updater/src/: emit.rs  lib.rs  main.rs  parse.rs  resources.rs
updater/src/emit/: opcodes.rs  packets.rs
win32_overlay/: Cargo.toml  README.md  build.rs
win32_overlay/src/: lib.rs
