[workspace]
members = ["updater"]

[package]
name = "larps"
version = "0.1.0"
edition = "2021"
default-run = "larps"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[features]
# enable raw packet logging per environment
packet_logging = []

[dependencies]
anyhow = "1.0.79"
bumpalo = { version = "3.14.0", features = ["allocator_api"] }
win32_overlay = { version = "0.1.0", path = "./win32_overlay" }
egui = { version = "0.25.0", default-features = false }
libloading = "0.8.1"
parking_lot = "0.12.1"
png = "0.17.10"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
snap = "1.1.1"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_QoS",
    "Win32_System_Threading",
]
