cargo-features = ["per-package-target"]

[package]
name = "updater"
version = "0.1.0"
edition = "2021"
# NOTE: I'm using this as a workaround for `chumsky`'s dependency on `stacker` being difficult
# to cross-compile for `x86_64-pc-windows-msvc` in WSL2 due to its dependency on `masm`.
forced-target = "x86_64-unknown-linux-gnu"

[dependencies]
anyhow = "1.0.79"
chumsky = { version = "0.9.3", features = ["nightly"] }
heck = "0.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_bare = "0.5.0"
serde_json = "1.0.111"
snap = "1.1.1"
