[package]
name = "win32_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
egui = { version = "0.25.0", default-features = false }

[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
gl_generator = "0.14.0"
